fixing spacing issue

--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -39,10 +39,10 @@ div.quote_blurb{
 
 p{
   padding-left: 20px;
+  padding-right: 20px;
   font-size: 16pt;
   font-family: 'Share Tech Mono', monospace;
   color: #00ff66;
-  width: 65%;
 }
 
 p.quote{
